# harbor

./: .gitignore  DIARY.md  README.md  package.json  pnpm-lock.yaml
.claude/skills/land/: SKILL.md
.codex/scripts/: run-tests.sh
.github/workflows/: ci.yml
.husky/: pre-commit
apps/frontend/: eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.e2e.json  vite.config.ts
apps/frontend/e2e/: chat-e2e.spec.ts  chat-live.spec.ts  provision.spec.ts
apps/frontend/src/: App.test.tsx  App.tsx  index.css
apps/frontend/src/api/: chat-stream.test.ts  chat-stream.ts  harbor.test.ts  harbor.ts
apps/frontend/src/screens/: Chat.test.tsx  Chat.tsx  PickModel.test.tsx  PickModel.tsx  Provisioning.test.tsx  Provisioning.tsx
backend/: pyproject.toml
backend/harbor/: main.py
backend/harbor/application/services/: __init__.py  placement_policy.py  recipe_compiler.py  resource_resolver.py
backend/harbor/application/use_cases/: create_deployment.py
backend/harbor/composition/: __init__.py  app.py  container.py  ids.py  providers.py
backend/harbor/config/: modal_config.py
backend/harbor/domain/: catalog.py  deployment.py  endpoint.py  errors.py  events.py  identifiers.py  placement.py  provider_plan.py  recipe.py  resources.py  workflow.py
backend/harbor/domain/ports/: clock.py  deployment_repository.py  event_bus.py  id_factory.py  model_catalog.py  provider_adapter.py  provider_registry.py
backend/harbor/domain/services/: placement_policy.py  recipe_compiler.py  resource_resolver.py
backend/harbor/infrastructure/catalog/: static.py
backend/harbor/infrastructure/clock/: system.py
backend/harbor/infrastructure/eventing/: memory.py
backend/harbor/infrastructure/persistence/: memory.py
backend/harbor/infrastructure/providers/modal/: adapter.py  client.py  default_client.py  registry.py
backend/harbor/interfaces/http/: __init__.py  deps.py
backend/harbor/interfaces/http/routers/: __init__.py  catalog.py  deployments.py
backend/harbor/interfaces/http/schemas/: __init__.py  catalog.py  chat.py  deployments.py
backend/tests/: test_composition_ids.py  test_composition_integration.py  test_create_deployment.py  test_default_placement_policy.py  test_default_recipe_compiler.py  test_default_resource_resolver.py  test_deployment_aggregate.py  test_domain_imports.py  test_http_catalog.py  test_http_chat.py  test_http_deployments.py  test_infrastructure_catalog.py  test_infrastructure_clock.py  test_infrastructure_event_bus.py  test_infrastructure_repository.py  test_main.py  test_modal_config.py  test_modal_default_client.py  test_modal_provider.py  test_modal_qwen_vllm_cli.py  test_modal_registry.py  test_ports_imports.py
modal_apps/: qwen_vllm.py
