[project]
name = "harbor"
version = "0.1.0"
description = "FastAPI backend for Harbor"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.10,<3",
]

[dependency-groups]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.24,<2",
    "httpx>=0.27,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "import-linter>=2.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harbor"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.importlinter]
root_package = "harbor"

# Core onion layers. Higher layers can import from lower; siblings declared
# with `|` cannot import each other.
#   composition  - the only place allowed to know about all other layers
#   interfaces   - driving adapters (HTTP, WS); sibling to infrastructure
#   infrastructure - driven adapters (DB, provider SDKs); sibling to interfaces
#   application  - use cases
#   domain       - pure types, ports, aggregates (knows nothing)
[[tool.importlinter.contracts]]
name = "Onion layers"
type = "layers"
layers = [
    "harbor.composition",
    "harbor.interfaces | harbor.infrastructure",
    "harbor.application",
    "harbor.domain",
]

# Config is a leaf: only composition is allowed to read it.
[[tool.importlinter.contracts]]
name = "Config is consumed only by composition"
type = "forbidden"
source_modules = [
    "harbor.domain",
    "harbor.application",
    "harbor.infrastructure",
    "harbor.interfaces",
]
forbidden_modules = ["harbor.config"]

[[tool.importlinter.contracts]]
name = "Config has no internal harbor imports"
type = "forbidden"
source_modules = ["harbor.config"]
forbidden_modules = [
    "harbor.domain",
    "harbor.application",
    "harbor.infrastructure",
    "harbor.interfaces",
    "harbor.composition",
]
